updating title for demo book; correcting style that prevented an outline to be visible

--- a/react/create_react_app_1/src/redux_study/redux_sample_app/App.scss
+++ b/react/create_react_app_1/src/redux_study/redux_sample_app/App.scss
@@ -296,7 +296,6 @@ h1, h2, h3{
         display: flex;
         justify-content: center;
         @media screen and (min-width: $widescreen-tablet-breakpoint) {
-            overflow: hidden;
             flex: unset; 
             text-align: left;
             display: block;
